[gd_scene load_steps=6 format=3 uid="uid://bmjiduli5bctj"]

[ext_resource type="Script" uid="uid://clxw3ram8acmn" path="res://scripts/player.gd" id="1_6t5aa"]
[ext_resource type="PackedScene" uid="uid://b7846lv8ccl0k" path="res://components/health_component.tscn" id="3_6t5aa"]
[ext_resource type="SpriteFrames" uid="uid://dbxee5v1d3jhh" path="res://assets/sprites/run.tres" id="3_fkybt"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v0iea"]
radius = 5.92182
height = 22.1413

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvnsp"]
size = Vector2(31, 46.5)

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.908254, 0.765258)
script = ExtResource("1_6t5aa")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2.20203, -39.2025)
scale = Vector2(0.586017, 0.60209)
sprite_frames = ExtResource("3_fkybt")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(3.30304, -23.5215)
scale = Vector2(1.85925, -2.00663)
shape = SubResource("CapsuleShape2D_v0iea")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AreaAttack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAttack"]
position = Vector2(22.0203, -22.2147)
shape = SubResource("RectangleShape2D_cvnsp")
debug_color = Color(0.787205, 0.171296, 0.955437, 0.42)

[node name="Components" type="Node" parent="."]

[node name="HealthComponent" parent="Components" node_paths=PackedStringArray("progress_bar") instance=ExtResource("3_6t5aa")]
progress_bar = NodePath("../../ProgressBar")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -15.0
offset_top = -57.0
offset_right = 21.0
offset_bottom = -49.0
value = 100.0
show_percentage = false

[connection signal="body_entered" from="AreaAttack" to="." method="_on_area_attack_body_entered"]
[connection signal="body_exited" from="AreaAttack" to="." method="_on_area_attack_body_exited"]
